# vitae

./: CLAUDE.md  Cargo.toml  README.md
crates/chess/: Cargo.toml  README.md
crates/chess/src/: assets.rs  board.rs  check.rs  fen.rs  game.rs  main.rs  moves.rs  types.rs  view.rs
crates/core/: Cargo.toml
crates/core/src/: builder.rs  color.rs  element.rs  events.rs  layout.rs  lib.rs  style.rs  svg_data.rs  texture.rs
crates/core/src/elements/: div.rs  img.rs  mod.rs  portal.rs  svg.rs  text.rs
crates/kitchen_sink/: Cargo.toml
crates/kitchen_sink/src/: main.rs
crates/lumen/: Cargo.toml  README.md
crates/lumen/src/: main.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  renderer.rs  texture.rs
crates/vitae/: Cargo.toml
crates/vitae/src/: lib.rs  prelude.rs  signal.rs  window.rs
docs/: getting-started.md  images.md  layout.md  state-management.md  styling.md  vision.md
docs/design/: core.md  extended.md  todo.md
examples/: hello.rs
src/: lib.rs  main.rs  prelude.rs  utils.rs  window.rs
src/core/: builder.rs  color.rs  draw.rs  element.rs  layout.rs  mod.rs  style.rs
src/core/elements/: div.rs  mod.rs  text.rs
src/immediate_ui/: builder.rs  color.rs  colors.rs  draw.rs  element.rs  elements.rs  layout.rs  mod.rs  style.rs
src/immediate_ui/elements/: div.rs
src/renderer_wgpu/: mod.rs  state.rs  vertex.rs
