[workspace]
resolver = "2"
members = [
    "crates/chess",
    "crates/core", "crates/lumen",
    "crates/render",
    "crates/vitae",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal crates
vitae_core = { path = "crates/core" }
vitae_render = { path = "crates/render" }

# Rendering
vello = "0.6"
parley = "0.7"
winit = "0.30"

# Utilities
pollster = "0.4"
glam = "0.30"
generational-arena = "0.2"
